<resources>
    <string name="app_name">MyApp</string>
    <string name="title_home">Home/FAQ</string>
    <string name="title_dashboard">Post</string>
    <string name="title_notifications">Message</string>
    <string name="title_feed">Feed</string>
    <string name="title_rate">Rate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>