<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_add_card_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_rate"
        android:icon="@drawable/ic_baseline_star_rate_24"
        android:title="@string/title_rate" />

</menu>